# nemotron-voice-agent-provider

./: Dockerfile  LICENSE  docker-compose.yml  run.sh  setup.sh  start.sh  stop.sh
.github/workflows/: ci.yml
config/: env.example
nvidia-pipecat/: .gitignore  CHANGELOG.md  NVIDIA_PIPECAT.md  README.md  flake.nix  pyproject.toml  third_party_oss_license.txt
nvidia-pipecat/docs/: BEST_PRACTICES.md  JETSON_THOR.md  MULTILINGUAL.md  NVIDIA_PIPECAT.md  SPECULATIVE_SPEECH_PROCESSING.md
nvidia-pipecat/examples/: README.md
nvidia-pipecat/examples/nat_agent/: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  bot_websocket.py  docker-compose.yml  env.example  pyproject.toml
nvidia-pipecat/examples/nat_agent/agent/: .dockerignore  Dockerfile  README.md  menu.json  pyproject.toml
nvidia-pipecat/examples/nat_agent/agent/configs/: config.yml
nvidia-pipecat/examples/nat_agent/agent/src/nvidia_flowershop/: __init__.py  register.py  ui_state_api.py
nvidia-pipecat/examples/nat_agent/agent/src/nvidia_flowershop/configs/: config.yml
nvidia-pipecat/examples/nat_agent/agent/src/nvidia_flowershop/data/: eval_dataset.json
nvidia-pipecat/examples/voice_agent_webrtc/: Dockerfile  README.md  demo.webm  docker-compose.jetson.yml  docker-compose.yml  env.example  env.jetson.example  ipa.json  pipeline.py  prompt.yaml  pyproject.toml
nvidia-pipecat/examples/voice_agent_websocket/: Dockerfile  README.md  bot.py  docker-compose.yml  env.example  pyproject.toml
nvidia-pipecat/examples/voice_agent_websocket/static/: index.html
nvidia-pipecat/examples/webrtc_ui/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json
nvidia-pipecat/examples/webrtc_ui/src/: App.tsx  AudioStream.tsx  AudioWaveForm.tsx  MicrophoneButton.tsx  PromptInput.tsx  Transcripts.tsx  VoiceSelector.tsx  WebRTCButton.tsx  config.ts  index.css  main.tsx  types.ts  vite-env.d.ts
nvidia-pipecat/examples/webrtc_ui/src/components/ui/: header.tsx  labeled-select.tsx  sonner.tsx
nvidia-pipecat/examples/webrtc_ui/src/hooks/: use-pipecat-webrtc.ts
nvidia-pipecat/examples/webrtc_ui/src/lib/: utils.ts
nvidia-pipecat/examples/webrtc_ui/src/utils/: waitForICEGatheringComplete.ts
nvidia-pipecat/src/nvidia_pipecat/frames/: action.py  custom_view.py  riva.py
nvidia-pipecat/src/nvidia_pipecat/processors/: audio_util.py  nvidia_context_aggregator.py  nvidia_rtvi.py  transcript_synchronization.py
nvidia-pipecat/src/nvidia_pipecat/serializers/: nvidia_websocket_serializer.py
nvidia-pipecat/src/nvidia_pipecat/services/: nat_agent.py  nvidia_llm.py  nvidia_rag.py  riva_speech.py
nvidia-pipecat/src/nvidia_pipecat/utils/: logging.py  riva_text_filter.py
nvidia-pipecat/tests/perf/: README.md  file_input_client.py  run_multi_client_benchmark.sh  ttfb_analyzer.py
nvidia-pipecat/tests/unit/: test_audio_util.py  test_basic_pipelines.py  test_custom_view.py  test_frame_creation.py  test_nat_agent.py  test_nvidia_aggregators.py  test_nvidia_llm_service.py  test_nvidia_rag_service.py  test_nvidia_tts_response_cacher.py  test_nvidia_websocket_serializer.py  test_riva_asr_service.py  test_riva_tts_service.py  test_transcription_sync_processors.py  test_utils.py  utils.py
nvidia-pipecat/tools/scripts/AA-BigBenchAudio-eval/: README.md  analyze_results.py  convert_to_audio.py  download_dataset.py  eval.py  find_invalid_results.py  pyproject.toml  speech-inference.py  text-inference.py  transcribe.py
nvidia-pipecat/tools/scripts/Full-Duplex-Bench-eval/: README.md  inference.py
