[project]
name = "voice-agent-webrtc"
version = "0.1.0"
description = "Voice Agent WebRTC example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nvidia-pipecat",
    "opencv-python>=4.13.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.1",
]

[tool.uv.sources]
nvidia-pipecat = { path = "../..", editable = true }

[tool.uv]
override-dependencies = [
    "nltk>=3.9.3",
    "protobuf==5.29.6",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
