[project]
name = "voice-agent-websocket-example"
version = "0.1.0"
description = "NVIDIA Voice Agent example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nvidia-pipecat",
    "fastapi>=0.115.7",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.1",
]

[tool.uv.sources]
nvidia-pipecat = { path = "../..", editable = true }

[tool.uv]
override-dependencies = [
    "nltk>=3.9.3",
    "protobuf==5.29.6",
]
