# SPDX-FileCopyrightText: Copyright (c) 2025, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: BSD 2-Clause License

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
name = "nvidia_flowershop_agent"
version = "0.1.0"
dependencies = [
    "nvidia-nat[langchain,telemetry]>=1.4.0,<1.5.0",
    "langgraph>=1.0.5,<2.0.0",
    "langchain>=1.2.3,<2.0.0",
    "langchain-core>=1.2.6,<2.0.0",
    "matplotlib>=3.10.7",
    "cryptography>=46.0.5",
    "nltk>=3.9.3",
    "protobuf==5.29.6",
]
requires-python = ">=3.11,<3.14"
description = "NVIDIA Flowershop NeMo Agent toolkit - Agent deployment"
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
nvidia_flowershop = "nvidia_flowershop.register"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nvidia_flowershop = ["configs/*.yml", "data/*.json"] 
