[project]
name = "aa-bigbench-audio-eval"
version = "0.1.0"
description = "Tools to run and evaluate Big Bench Audio experiments (download, speech/text inference, transcribe, LLM judge)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "soundfile==0.12.1",
    "librosa==0.11.0",
    "resampy==0.4.3",
    "websockets==12.0",
    "datasets==2.19.0",
    "huggingface_hub==0.23.4",
    "torch>=2.9.1",
    "pipecat-ai==0.0.98",
    "nvidia-riva-client==2.21.1",
    "grpcio==1.67.1",
    "anthropic==0.84.0",
    "aiohttp==3.11.12",
    "requests==2.32.3",
]

# Optional: uncomment to make the directory installable as a package.
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
